--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.3.2",
-    "@testing-library/user-event": "7.1.2",
-    "@types/jest": "24.0.0",
-    "@types/node": "12.0.0",
-    "@types/react": "16.9.0",
-    "@types/react-dom": "16.9.0",
-    "@types/react-router-dom": "5.1.5",
-    "bootstrap": "4.5.0",
-    "gh-pages": "3.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
+    "bootstrap": "^4.5.0",
+    "gh-pages": "^3.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-ga": "^3.0.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
-    "typescript": "3.7.2"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "predeploy": "npm run build",
